arkts_static_test/03_Types/ets_cases/3.17_Tuple_Types/cross_lang_verify/compile-pass/TYP_03_17_004.swift
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * Swift cross-language verification for TYP_03_17_004_PASS_TUPLE_AS_TUPLE
 * Swift 没有 Tuple 超类型
 */
import Foundation

let tuple: (Int, String) = (1, "hello")
// Swift 没有 Tuple 超类型，但可以赋值给 Any
let t: Any = tuple

print("verified")
